--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+mixinextras_version=0.2.0-rc.5
+mixinsquared_version=0.0.2
+tomlj_version=1.1.0
+
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 loader_version=0.14.22
+fabric_version=0.89.0+1.20.1
 
 # Mod Properties
 mod_version = 1.0.0
@@ -14,3 +19,4 @@ archives_base_name = HMMinecraftMod
 
 sleep_rework_version=fabric-beta-1.20.1-1.1.0
 sleep_warp_version=2.2.0-rc1+1.20.1
+environmentz_version=2.0.5+1.20.1
