--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ archives_base_name = HMMinecraftMod
 sleep_rework_version=fabric-beta-1.20.1-1.1.0
 sleep_warp_version=2.2.0-rc1+1.20.1
 environmentz_version=2.0.5+1.20.1
+betterend_version=4.0.10
+bclib_version=3.0.13
