--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@ mixinsquared_version=0.0.2
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
+#yarn_mappings=1.20.1+build.10
+qm_version=23
 loader_version=0.14.22
 fabric_version=0.89.0+1.20.1
 
@@ -22,3 +23,4 @@ sleep_warp_version=2.2.0-rc1+1.20.1
 environmentz_version=2.0.5+1.20.1
 betterend_version=4.0.10
 bclib_version=3.0.13
+create_fabric_version=0.5.1-d-build.1161+mc1.20.1
