--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'io.github.juuxel.loom-vineflower' version '1.11.0'
     id 'maven-publish'
 }
 
@@ -14,6 +15,14 @@ repositories {
     // for more information about repositories.
 
     maven { url = "https://jitpack.io" }
+    maven {
+        name = "ParchmentMC"
+        url = "https://maven.parchmentmc.org"
+    }
+    maven {
+        name = "Quilt"
+        url = "https://maven.quiltmc.org/repository/release"
+    }
 
     exclusiveContent {
         forRepository { maven { url "https://api.modrinth.com/maven" } }
@@ -54,7 +63,11 @@ sourceSets {
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    mappings loom.layered {
+        mappings "org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.qm_version}:intermediary-v2"
+        parchment "org.parchmentmc.data:parchment-1.20.1:2023.06.26@zip"
+        officialMojangMappings { nameSyntheticMembers = false }
+    }
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
@@ -66,6 +79,7 @@ dependencies {
     modCompileOnly("maven.modrinth:environmentz:${project.environmentz_version}")
     modCompileOnly("maven.modrinth:betterend:${project.betterend_version}")
     modCompileOnly("maven.modrinth:bclib:${project.bclib_version}")
+    modCompileOnly("maven.modrinth:create-fabric:${project.create_fabric_version}")
 }
 
 processResources {
