--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ sleep_warp_version=2.2.0-rc1+1.20.1
 environmentz_version=2.0.5+1.20.1
 betterend_version=4.0.10
 bclib_version=3.0.13
+impaled_version=1.1.4
