Trying to get Impaled working

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-mixinextras_version=0.2.0-rc.5
+mixinextras_version=0.2.0
 mixinsquared_version=0.1.1
 
 # Fabric Properties
