--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,7 @@ environmentz_version=2.0.5+1.20.1
 betterend_version=4.0.10
 bclib_version=3.0.13
 gravestones_version=v1.15
+create_fabric_version=0.5.1-d-build.1161+mc1.20.1
+emi_version=1.0.22+1.20.1+fabric
+create_porting_lib_version=2.1.1127+1.20
+create_registrate_version=1.3.62-MC1.20.1
